# autograd-ml

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: dataset.yaml
configs/mlflow/: local.yaml
configs/model/: mlp.yaml
configs/preprocess/: catboost.yaml
configs/train/: default.yaml
src/autograd_tabular/: download.py  infer.py  train.py
